--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>container project</title>
 </head>
 <body>
-    <section>
+    <section class="text-box">
         <h1>container project</h1>
         <p>container project paragraph</p>
     </section>
     <section>
         <div class="large-container">
             <div class="small-container">
-                <h2>this is a small container</h2>
+                <h2>this is a <br>small container text</h2>
+            </div>
+
+            <div class="small-container">
+                <h2>this is a <br>small container text</h2>
             </div>
             
             <div class="small-container">
-                <h2>this is a small container</h2>
-            </div>
-            
-            <div class="small-container">
-                <h2>this is a small container</h2>
+                <h2>this is a <br>small container text</h2>
             </div>
         </div>
     </section>
